--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
+eventlet==0.19.0
 Flask==0.10.1
-Flask_SocketIO
-itsdangerous==0.24
+Flask-Login==0.3.2
+Flask-SocketIO==2.4
+Flask-SQLAlchemy==2.1
+Flask-WTF==0.12
+gevent==1.1.1
+greenlet==0.4.9
+gunicorn==19.4.5
 Jinja2==2.7.3
-MarkupSafe==0.23
-python-engineio
-python-socketio
-six==1.9.0
-Werkzeug==0.10.4
+kombu==3.0.35
+python-socketio==1.3
+requests==2.9.1
+SQLAlchemy==1.0.13
+virtualenv==14.0.1
+Werkzeug==0.10.1
+WTForms==2.1
